Add tb result lookup
