# src/api/v1/reference/models/tb-result.js
@@ -1,0 +1,17 @@
+class TbResultOption {
+  constructor (code, description) {
+    this.code = code
+    this.description = description
+  }
+
+  static fromEntity (entity) {
+    return new TbResultOption(
+      entity.code,
+      entity.description
+    )
+  }
+}
+
+export {
+  TbResultOption
+}
